--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
-    "pages/folder/invoicelist/invoicelist",
     "pages/home/home",
+
+    "pages/home/email/email",
+    "pages/index/index",
+    "pages/folder/invoicelist/invoicelist",
     "pages/home/fileinput/fileinput",
     "pages/home/more/more",
     "pages/folder/folder",
@@ -9,7 +12,6 @@
     "pages/home/manual/manual",
     "pages/home/detail/detail",
     "pages/about/about",
-    "pages/index/index",
     "pages/logs/logs",
     "pages/camera/camera",
     "pages/home/checked/checked",
