--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@miniprogram-component-plus/row": "^1.0.0",
     "@vant/weapp": "^1.7.2",
     "vant-weapp": "^0.5.29",
-    "weui-miniprogram": "^1.0.8"
+    "weui-miniprogram": "^1.0.8",
+    "wx-promise-pro": "^3.2.4"
   }
 }
